--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "lil-gui": "^0.21.0",
     "pinia": "^3.0.4",
+    "stats.js": "^0.17.0",
+    "three": "^0.182.0",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
@@ -24,6 +27,7 @@
     "@tsconfig/node24": "^24.0.4",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^24.10.9",
+    "@types/three": "^0.182.0",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vitejs/plugin-vue-jsx": "^5.1.3",
     "@vitest/eslint-plugin": "^1.6.6",
